git 配ébu 配置 from githubç

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+github.client.id=f30ffb702332e2e9ac57
+github.client.secret=a4d5f45406f37f42b998dd8b9080b72ec3f0e38b
+github.redirect.url=http://localhost:8081/callback
