--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,11 @@ server.port=8081
 github.client.id=f30ffb702332e2e9ac57
 github.client.secret=a4d5f45406f37f42b998dd8b9080b72ec3f0e38b
 github.redirect.url=http://localhost:8081/callback
+
+#thymeleaf start
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+#开发时关闭缓存,不然没法看到实时页面
+spring.thymeleaf.cache=false
+#thymeleaf end
