--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.thymeleaf.servlet.content-type=text/html
 #开发时关闭缓存,不然没法看到实时页面
 spring.thymeleaf.cache=false
 #thymeleaf end
+
+mybatis.mapper-locations=classpath:life/lwg/community/mapper/*.xml
+
+spring.datasource.username=root
+spring.datasource.password=109837
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://39.96.48.41:3306/community?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.druid.test-on-borrow=true
+spring.datasource.druid.test-while-idle=true
